WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
259647
[GTK] Fallback to first render node returned by DRM when failing to get using EGLDevice
https://bugs.webkit.org/show_bug.cgi?id=259647
Summary
[GTK] Fallback to first render node returned by DRM when failing to get using...
Carlos Garcia Campos
Reported
2023-07-31 07:54:40 PDT
There might be drivers that don't implement EGL_EXT_device_query or EGL_EXT_device_drm. In those cases could just fallback to get the first render node returned by libdrm.
Attachments
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2023-07-31 08:01:08 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/16227
EWS
Comment 2
2023-08-17 07:20:08 PDT
Committed
266997@main
(a6106792d52a): <
https://commits.webkit.org/266997@main
> Reviewed commits have been landed. Closing PR #16227 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug