[GTK] Fallback to first render node returned by DRM when failing to get using EGLDevice https://bugs.webkit.org/show_bug.cgi?id=259647

Reviewed by Alejandro G. Castro.

There might be drivers that don't implement EGL_EXT_device_query or
EGL_EXT_device_drm. In those cases just fallback to get the first
render node returned by libdrm.

* Source/WebCore/platform/graphics/PlatformDisplay.cpp:
(WebCore::drmForeachDevice):
(WebCore::drmFirstRenderNode):
(WebCore::drmRenderNodeFromPrimaryDeviceFile):
(WebCore::PlatformDisplay::drmRenderNodeFile):

Canonical link: https://commits.webkit.org/266997@main